# stigma_ii

./: .gitignore  QUE.txt  Quality.ods  README.md  RES.txt  pyproject.toml  unholy.py
hub/: gpu.txt
hub/CS1/: blade_runner.py  results.ods
hub/CS2/: results.ods
hub/CS3/: blade_runner.py  results.ods
hub/CS4/: blade_runner.py  results.ods
hub/CS5/: results.ods
hub/CS6/: blade_runner.py  results.ods
hub/CS7/: results.ods
hub/CS8/: results.ods
hub/TS1/: results.ods
hub/TS2/: blade_runner.py  results.ods
hub/TS3/: blade_runner.py  results.ods
hub/TS4/: blade_runner.py  results.ods
hub/TS5/: blade_runner.py  results.ods
hub/TS6/: blade_runner.py  results.ods
hub/TS7/: blade_runner.py  results.ods
hub/TS8/: blade_runner.py  results.ods
stigma_ii/: convector.py  tests.py
stigma_ii/hub/CS2/: blade_runner.py
stigma_ii/hub/CS3/: blade_runner.py
stigma_ii/hub/CS4/: blade_runner.py
stigma_ii/hub/CS5/: blade_runner.py
stigma_ii/hub/CS6/: blade_runner.py
stigma_ii/hub/CS7/: blade_runner.py
stigma_ii/hub/CS8/: blade_runner.py
stigma_ii/hub/TS1/: blade_runner.py
stigma_ii/hub/TS2/: blade_runner.py
stigma_ii/hub/TS3/: blade_runner.py
stigma_ii/hub/TS4/: blade_runner.py
stigma_ii/hub/TS5/: blade_runner.py
stigma_ii/hub/TS6/: blade_runner.py
stigma_ii/hub/TS7/: blade_runner.py
stigma_ii/hub/TS8/: blade_runner.py
