[tool.poetry]
name = "stigma_ii"
version = "0.0.1"
description = "Base tree-base examination: I"
authors = [
  "edazizovv",
]
license = "MIT"
readme = "README.md"
packages = [{include = "stigma_ii"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"